tests/diagnostics/len_on_non_slice.stderr
error[E0109]: len の引数はスライス・Vec・str・String・HashMap である必要があります (実際 [i32; 3])
 --> tests/diagnostics/len_on_non_slice.kal:2:5
  |
2 | len([1, 2, 3]);
  |     ^^^^^^^^^
1 個のエラーで中断しました
