tests/diagnostics/len_on_non_slice.kal
# `len` takes a slice &[T], not an array (borrow it first: len(&a)).
len([1, 2, 3]);
